# sssp-simulation

./: .clang-format  CMakeLists.txt  arguments.cpp  arguments.hpp  buddy_allocator.hpp  containers.hpp  crauser.cpp  crauser.hpp  crit_crauser.cpp  crit_crauser.hpp  crit_dijkstra.cpp  crit_dijkstra.hpp  crit_heuristic.cpp  crit_heuristic.hpp  crit_oracle.cpp  crit_oracle.hpp  crit_paper_in.cpp  crit_paper_in.hpp  crit_paper_out.cpp  crit_paper_out.hpp  crit_traff_bridge.cpp  crit_traff_bridge.hpp  criteria.hpp  dijkstra.cpp  dijkstra.hpp  draw_graph.cpp  draw_graph.hpp  generate_edges.cpp  generate_edges.hpp  generate_positions.cpp  generate_positions.hpp  graph.cpp  graph.hpp  heuristic_relaxing_dijkstra.cpp  heuristic_relaxing_dijkstra.hpp  linear_allocator.hpp  local_allocator.cpp  local_allocator.hpp  main.cpp  main_batch.cpp  (+12 more)
tests/: buddy_allocator_test.cpp  crauser_test.cpp  criteria_test.cpp  dijkstra_basic_test.cpp  dijkstra_test.cpp  graph_test.cpp  heuristic_relaxing_dijkstra_test.cpp  local_allocator_test.cpp  math_test.cpp  optimal_phases_test.cpp  test.cpp  test_graph.cpp  test_graph.hpp
